crates/cadenza-compiler/test-data/semantics/literals-error-unclosed-character-literal.expected
error: unterminated character literal
 --> test.cdz:1:1
  |
1 | 'a
  | ^^ missing closing single quote
  |
  = note: character literals must be closed on the same line